# esp-miner

host/: CMakeLists.txt  main.c  sdkconfig.defaults
host/main/: CMakeLists.txt  main.c
main/: nvs_config.c
main/http_server/: http_server.c
